; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/services/ead/src/extr_ead-client.c_send_username.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/services/ead/src/extr_ead-client.c_send_username.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i8* }
%struct.TYPE_5__ = type { i32 }

@EAD_TYPE_SET_USERNAME = common dso_local global i32 0, align 4
@msg = common dso_local global %struct.TYPE_4__* null, align 8
@user = common dso_local global i32 0, align 4
@username = common dso_local global i32 0, align 4
@EAD_TYPE_ACK_USERNAME = common dso_local global i32 0, align 4
@handle_none = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @send_username to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_username() #0 {
  %1 = load i32, i32* @EAD_TYPE_SET_USERNAME, align 4
  %2 = call i8* @htonl(i32 %1)
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** @msg, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  store i8* %2, i8** %4, align 8
  %5 = call i8* @htonl(i32 4)
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @msg, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i8* %5, i8** %7, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @msg, align 8
  %9 = load i32, i32* @user, align 4
  %10 = call %struct.TYPE_5__* @EAD_DATA(%struct.TYPE_4__* %8, i32 %9)
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @username, align 4
  %14 = call i32 @strcpy(i32 %12, i32 %13)
  %15 = load i32, i32* @EAD_TYPE_ACK_USERNAME, align 4
  %16 = load i32, i32* @handle_none, align 4
  %17 = call i32 @send_packet(i32 %15, i32 %16, i32 1)
  ret i32 %17
}

declare dso_local i8* @htonl(i32) #1

declare dso_local i32 @strcpy(i32, i32) #1

declare dso_local %struct.TYPE_5__* @EAD_DATA(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @send_packet(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
